# intelligent-job-recommendation-system

./: .env.exsample  README.md  makefile  pyproject.toml
.github/: python_ci.yaml
.github/workflows/: check_main.yaml  check_pr.yaml  python_ci.yaml  terraform_check.yaml  terraform_deploy.yaml
data-pipeline/src/: temp.py
terraform/dev/: mian.tf  variables.tf
